# claude-interviews

./: README.md  pyproject.toml
src/interviewer/: __init__.py  api.py  embed_interviews.py
static/: index.html
